--- a/.env.example
+++ b/.env.example
@@ -155,7 +155,7 @@ WORKSPACE_INSTALL_SYMFONY=false
 WORKSPACE_INSTALL_PYTHON=false
 WORKSPACE_INSTALL_PYTHON3=false
 WORKSPACE_INSTALL_POWERLINE=false
-WORKSPACE_INSTALL_SUPERVISOR=false
+WORKSPACE_INSTALL_SUPERVISOR=true
 WORKSPACE_INSTALL_IMAGE_OPTIMIZERS=false
 WORKSPACE_INSTALL_IMAGEMAGICK=false
 WORKSPACE_IMAGEMAGICK_VERSION=latest
@@ -357,12 +357,12 @@ APACHE_INSTALL_HTTP2=false
 
 ### MYSQL #################################################
 
-MYSQL_VERSION=latest
-MYSQL_DATABASE=default
-MYSQL_USER=default
-MYSQL_PASSWORD=secret
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root
+MYSQL_VERSION=8
+MYSQL_DATABASE=baohanh
+MYSQL_USER=thaiduc
+MYSQL_PASSWORD=baohanh@123
+MYSQL_PORT=3302
+MYSQL_ROOT_PASSWORD=123@baohanh
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### CLICKHOUSE #################################################
