--- a/php-fpm/php7.4.ini
+++ b/php-fpm/php7.4.ini
@@ -909,9 +909,9 @@ default_socket_timeout = 60
 ;extension=php_pdo_mysql.dll
 ;extension=php_pdo_oci.dll
 ;extension=php_pdo_odbc.dll
-;extension=php_pdo_pgsql.dll
+extension=php_pdo_pgsql.dll
 ;extension=php_pdo_sqlite.dll
-;extension=php_pgsql.dll
+extension=php_pgsql.dll
 ;extension=php_shmop.dll
 
 ; The MIBS data available in the PHP distribution must be installed.
